# libambi

./: .gitignore  README.md  check_progress.py  medstdcalc.py  plot_ambi_logs.py  pyproject.toml  requirements.txt  test-runtime.sh  train_model
ambi/: .envrc  __init__.py  bitstream.py  codec.py  compress.py  config.yaml  config_balanced.yaml  config_highpsnr.yaml  config_lowrate.yaml  core.py  distortion.py  features.py  io.py  models.py  partition.py  refinement.py  rl.py  rl.py.bak2  utils.py
ambi/cli/: bench.py  decode.py  encode.py  train.py
models/checkpoints/: ambi_policy_cpu_e1w1_epoch001.ts  ambi_policy_cpu_e1w1_epoch002.ts  ambi_policy_cpu_e1w1_epoch003.ts  ambi_policy_cpu_e1w1_epoch004.ts  ambi_policy_cpu_e1w1_epoch005.ts  ambi_policy_cpu_e1w1_epoch006.ts  ambi_policy_cpu_e1w1_epoch007.ts  ambi_policy_cpu_e1w1_epoch008.ts  ambi_policy_cpu_e1w1_epoch009.ts
tests/: test_bitstream.py  test_features.py  test_roundtrip.py
